<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_IO" Id="{b3da18f8-4cdb-46e7-8b32-f7b33d498f99}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
//input signal
//DC - DS
	DebugCart_APPowerOnSignal					: BOOL;
	DebugCart_APPresentSignal					: BOOL;
	FluidLeakageSignal							: BOOL;
	GroundFault									: BOOL;
	
//output signal
//DC - DS
	DebugCart_APPowerOn							: BOOL;
	DebugCart_ColumnPCWValve					: BOOL;
	
//TC
	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>